fixing menu z-indexing problem (hopefully)

--- a/styles/landing.less
+++ b/styles/landing.less
@@ -12,7 +12,7 @@
   padding: 0;
   text-align: center;
   width:100%;
-  z-index: 1;
+  z-index: -1;
 }
 
 #landing img {
@@ -142,10 +142,16 @@ header.landing .navwrap > ul {
 }
 
 @media (orientation: portrait) {
-  ul.image-map img {
+  #landing > img {
     height: 100%;
     max-height: 100%;
     width: auto;
     max-width: none;
   }
+
+  #landing,
+  #landing ul.image-map {
+    top: 85px;
+  }
+
 }
